datasource db {
  provider = "mongodb"
  url      = "mongodb+srv://prisma:admin@cluster0.vnpktz8.mongodb.net/upstudent?retryWrites=true&w=majority"
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id            String       @id @default(auto()) @map("_id") @db.ObjectId
  email         String       @unique
  password      String
  firstname     String
  lastname      String
  createdQuizes Quiz[]
  resultHistory QuizResult[]
}

model Quiz {
  id        String       @id @default(auto()) @map("_id") @db.ObjectId
  title     String
  questions Question[]
  author    User         @relation(fields: [authorId], references: [id])
  authorId  String
  results   QuizResult[]
}

model Question {
  id      String   @id @default(auto()) @map("_id") @db.ObjectId
  text    String
  quiz    Quiz     @relation(fields: [quizId], references: [id])
  quizId  String
  answers Answer[]
}

model Answer {
  id         String   @id @default(auto()) @map("_id") @db.ObjectId
  text       String
  valid      Boolean  @default(false)
  question   Question @relation(fields: [questionId], references: [id])
  questionId String
}

model QuizResult {
  id            String @id @default(auto()) @map("_id") @db.ObjectId
  quiz          Quiz   @relation(fields: [quizId], references: [id])
  quizId        String
  participant   User   @relation(fields: [participantId], references: [id])
  participantId String
  points        Int
}
