//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  password String [not null]
  firstname String [not null]
  lastname String [not null]
  createdQuizes Quiz [not null]
  resultHistory QuizResult [not null]
}

Table Quiz {
  id String [pk]
  title String [not null]
  questions Question [not null]
  author User [not null]
  authorId String [not null]
  results QuizResult [not null]
}

Table Question {
  id String [pk]
  text String [not null]
  quiz Quiz [not null]
  quizId String [not null]
  answers Answer [not null]
}

Table Answer {
  id String [pk]
  text String [not null]
  valid Boolean [not null, default: false]
  question Question [not null]
  questionId String [not null]
}

Table QuizResult {
  id String [pk]
  quiz Quiz [not null]
  quizId String [not null]
  participant User [not null]
  participantId String [not null]
  points Int [not null]
}

Ref: Quiz.authorId > User.id

Ref: Question.quizId > Quiz.id

Ref: Answer.questionId > Question.id

Ref: QuizResult.quizId > Quiz.id

Ref: QuizResult.participantId > User.id